// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat command ban should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/ban arg1",
  ],
]
`;

exports[`Chat command block should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/block arg1",
  ],
]
`;

exports[`Chat command clear should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/clear",
  ],
]
`;

exports[`Chat command color should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/color arg1",
  ],
]
`;

exports[`Chat command commercial should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/commercial arg1",
  ],
]
`;

exports[`Chat command delete should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/delete arg1",
  ],
]
`;

exports[`Chat command emoteOnly should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/emoteonly",
  ],
]
`;

exports[`Chat command emoteOnlyOff should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/emoteonlyoff",
  ],
]
`;

exports[`Chat command followersOnly should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/followers arg1",
  ],
]
`;

exports[`Chat command followersOnlyOff should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/followersoff",
  ],
]
`;

exports[`Chat command help should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/help",
  ],
]
`;

exports[`Chat command host should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/host arg1",
  ],
]
`;

exports[`Chat command marker should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/marker arg1",
  ],
]
`;

exports[`Chat command me should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/me arg1",
  ],
]
`;

exports[`Chat command mod should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/mod arg1",
  ],
]
`;

exports[`Chat command mods should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/mods",
  ],
]
`;

exports[`Chat command r9K should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/r9kbeta",
  ],
]
`;

exports[`Chat command r9KOff should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/r9kbetaoff",
  ],
]
`;

exports[`Chat command raid should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/raid arg1",
  ],
]
`;

exports[`Chat command slow should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/slow arg1",
  ],
]
`;

exports[`Chat command slowOff should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/slowoff",
  ],
]
`;

exports[`Chat command subscribers should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/subscribers",
  ],
]
`;

exports[`Chat command subscribersOff should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/subscribersoff",
  ],
]
`;

exports[`Chat command timeout should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/timeout arg1 arg2",
  ],
]
`;

exports[`Chat command unban should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/unban arg1",
  ],
]
`;

exports[`Chat command unblock should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/unblock arg1",
  ],
]
`;

exports[`Chat command unhost should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/unhost",
  ],
]
`;

exports[`Chat command unmod should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/unmod arg1",
  ],
]
`;

exports[`Chat command unraid should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/unraid",
  ],
]
`;

exports[`Chat command unvip should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/unvip arg1",
  ],
]
`;

exports[`Chat command vip should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/vip arg1",
  ],
]
`;

exports[`Chat command vips should call say with args 1`] = `
Array [
  Array [
    "#channel",
    "/vips",
  ],
]
`;

exports[`Chat command whisper should call say with args 1`] = `Array []`;

exports[`Chat connect should connect as anonymous 1`] = `
Object {
  "_raw": ":tmi.twitch.tv 001 <user> :Welcome, GLHF!",
  "channel": "<user>",
  "command": "001",
  "event": "CONNECTED",
  "isSelf": false,
  "message": "Welcome, GLHF!",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat connect should connect as authenticated 1`] = `
Object {
  "_raw": "@color=#0D4200;display-name=dallas;emote-sets=0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239;turbo=0;user-id=1337;user-type=admin :tmi.twitch.tv GLOBALUSERSTATE",
  "channel": undefined,
  "command": "GLOBALUSERSTATE",
  "event": "CONNECTED",
  "isSelf": false,
  "message": undefined,
  "tags": Object {
    "color": "#0D4200",
    "displayName": "dallas",
    "emoteSets": "0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239",
    "turbo": "0",
    "userId": "1337",
    "userType": "admin",
  },
  "timestamp": Any<Date>,
  "username": "dallas",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 1`] = `
Array [
  Array [
    "close",
  ],
  Array [
    "open",
  ],
  Array [
    "CAP REQ :twitch.tv/tags twitch.tv/commands twitch.tv/membership",
  ],
  Array [
    "PASS oauth:TOKEN",
  ],
  Array [
    "NICK USERNAME",
  ],
  Array [
    "JOIN #dallas",
  ],
]
`;

exports[`Chat reconnect should reconnect and rejoin channels 2`] = `
Object {
  "_raw": "@color=#0D4200;display-name=dallas;emote-sets=0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239;turbo=0;user-id=1337;user-type=admin :tmi.twitch.tv GLOBALUSERSTATE",
  "channel": undefined,
  "command": "GLOBALUSERSTATE",
  "event": "GLOBALUSERSTATE",
  "isSelf": false,
  "message": undefined,
  "tags": Object {
    "color": "#0D4200",
    "displayName": "dallas",
    "emoteSets": "0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239",
    "turbo": "0",
    "userId": "1337",
    "userType": "admin",
  },
  "timestamp": Any<Date>,
  "username": "dallas",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 3`] = `
Object {
  "_raw": "@color=#0D4200;display-name=dallas;emote-sets=0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239;turbo=0;user-id=1337;user-type=admin :tmi.twitch.tv GLOBALUSERSTATE",
  "channel": undefined,
  "command": "GLOBALUSERSTATE",
  "event": "CONNECTED",
  "isSelf": false,
  "message": undefined,
  "tags": Object {
    "color": "#0D4200",
    "displayName": "dallas",
    "emoteSets": "0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239",
    "turbo": "0",
    "userId": "1337",
    "userType": "admin",
  },
  "timestamp": Any<Date>,
  "username": "dallas",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 4`] = `
Object {
  "_raw": ":tmi.twitch.tv 001 <user> :Welcome, GLHF!",
  "channel": "<user>",
  "command": "001",
  "event": "001",
  "isSelf": false,
  "message": "Welcome, GLHF!",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 5`] = `
Object {
  "_raw": ":tmi.twitch.tv 002 <user> :Your host is tmi.twitch.tv",
  "channel": "<user>",
  "command": "002",
  "event": "002",
  "isSelf": false,
  "message": "Your host is tmi.twitch.tv",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 6`] = `
Object {
  "_raw": ":tmi.twitch.tv 003 <user> :This server is rather new",
  "channel": "<user>",
  "command": "003",
  "event": "003",
  "isSelf": false,
  "message": "This server is rather new",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 7`] = `
Object {
  "_raw": ":tmi.twitch.tv 004 <user> :-",
  "channel": "<user>",
  "command": "004",
  "event": "004",
  "isSelf": false,
  "message": "-",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 8`] = `
Object {
  "_raw": ":tmi.twitch.tv 375 <user> :-",
  "channel": "<user>",
  "command": "375",
  "event": "375",
  "isSelf": false,
  "message": "-",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 9`] = `
Object {
  "_raw": ":tmi.twitch.tv 372 <user> :You are in a maze of twisty passages.",
  "channel": "<user>",
  "command": "372",
  "event": "372",
  "isSelf": false,
  "message": "You are in a maze of twisty passages.",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 10`] = `
Object {
  "_raw": ":tmi.twitch.tv 376 <user> :>",
  "channel": "<user>",
  "command": "376",
  "event": "376",
  "isSelf": false,
  "message": ">",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 11`] = `
Object {
  "_raw": ":ronni!ronni@ronni.tmi.twitch.tv JOIN #dallas",
  "channel": "#dallas",
  "command": "JOIN",
  "event": "JOIN",
  "isSelf": false,
  "message": undefined,
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 12`] = `
Object {
  "_raw": "@broadcaster-lang=en;r9k=0;slow=0;subs-only=0 :tmi.twitch.tv ROOMSTATE #dallas",
  "channel": "#dallas",
  "command": "ROOMSTATE",
  "event": "ROOMSTATE",
  "isSelf": false,
  "message": undefined,
  "tags": Object {
    "broadcasterLang": "en",
    "r9K": "0",
    "slow": 0,
    "subsOnly": false,
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat reconnect should reconnect and rejoin channels 13`] = `
Object {
  "_raw": "@color=#0D4200;display-name=ronni;emote-sets=0,33,50,237,793,2126,3517,4578,5569,9400,10337,12239;mod=1;subscriber=1;turbo=1;user-type=staff :tmi.twitch.tv USERSTATE #dallas",
  "channel": "#dallas",
  "command": "USERSTATE",
  "event": "USERSTATE",
  "isSelf": false,
  "message": undefined,
  "tags": Object {
    "badges": Object {},
    "bits": undefined,
    "color": "#0D4200",
    "displayName": "ronni",
    "emoteSets": Array [
      "0",
      "33",
      "50",
      "237",
      "793",
      "2126",
      "3517",
      "4578",
      "5569",
      "9400",
      "10337",
      "12239",
    ],
    "emotes": Array [],
    "isModerator": true,
    "mod": "1",
    "subscriber": "1",
    "turbo": "1",
    "userType": "staff",
    "username": "ronni",
  },
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages CLEARCHAT 1`] = `
Object {
  "_raw": ":tmi.twitch.tv CLEARCHAT #dallas",
  "channel": "#dallas",
  "command": "CLEARCHAT",
  "event": "CLEARCHAT",
  "isSelf": false,
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages CLEARCHAT user with reason 1`] = `
Object {
  "_raw": "@ban-reason=Follow\\\\sthe\\\\srules :tmi.twitch.tv CLEARCHAT #dallas :ronni",
  "channel": "#dallas",
  "command": "CLEARCHAT",
  "event": "USER_BANNED",
  "isSelf": false,
  "tags": Object {
    "banDuration": undefined,
    "banReason": "Follow the rules",
  },
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages CLEARMSG 1`] = `
Object {
  "_raw": "@login=ronni;target-msg-id=abc-123-def :tmi.twitch.tv CLEARMSG #dallas :HeyGuys",
  "channel": "#dallas",
  "command": "CLEARMSG",
  "event": "CLEARMSG",
  "isSelf": false,
  "message": "HeyGuys",
  "tags": Object {
    "login": "ronni",
    "targetMsgId": "abc-123-def",
  },
  "targetMessageId": "abc-123-def",
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages HOSTTARGET START 1`] = `
Object {
  "_raw": ":tmi.twitch.tv HOSTTARGET #ronni :dallas 123",
  "channel": "#ronni",
  "command": "HOSTTARGET",
  "event": "HOST_ON",
  "isSelf": false,
  "message": "dallas 123",
  "numberOfViewers": 123,
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "dallas",
}
`;

exports[`Chat should handle messages HOSTTARGET START_WITHOUT_VIEWERS 1`] = `
Object {
  "_raw": ":tmi.twitch.tv HOSTTARGET #ronni :dallas",
  "channel": "#ronni",
  "command": "HOSTTARGET",
  "event": "HOST_ON",
  "isSelf": false,
  "message": "dallas",
  "numberOfViewers": undefined,
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "dallas",
}
`;

exports[`Chat should handle messages HOSTTARGET STOP 1`] = `
Object {
  "_raw": ":tmi.twitch.tv HOSTTARGET #ronni :- 456",
  "channel": "#ronni",
  "command": "HOSTTARGET",
  "event": "HOST_OFF",
  "isSelf": false,
  "message": "- 456",
  "numberOfViewers": 456,
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "-",
}
`;

exports[`Chat should handle messages HOSTTARGET STOP_WITHOUT_VIEWERS 1`] = `
Object {
  "_raw": ":tmi.twitch.tv HOSTTARGET #ronni :-",
  "channel": "#ronni",
  "command": "HOSTTARGET",
  "event": "HOST_OFF",
  "isSelf": false,
  "message": "-",
  "numberOfViewers": undefined,
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "-",
}
`;

exports[`Chat should handle messages JOIN 1`] = `
Object {
  "_raw": ":ronni!ronni@ronni.tmi.twitch.tv JOIN #dallas",
  "channel": "#dallas",
  "command": "JOIN",
  "event": "JOIN",
  "isSelf": false,
  "message": undefined,
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages MODE another user +o 1`] = `
Object {
  "_raw": ":jtv MODE #dallas +o ronni",
  "channel": "#dallas",
  "command": "MODE",
  "event": "MOD_GAINED",
  "isModerator": true,
  "isSelf": false,
  "message": "+o",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages MODE another user -o 1`] = `
Object {
  "_raw": ":jtv MODE #dallas -o ronni",
  "channel": "#dallas",
  "command": "MODE",
  "event": "MOD_LOST",
  "isModerator": false,
  "isSelf": false,
  "message": "-o",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages MODE current user +o 1`] = `
Object {
  "_raw": ":jtv MODE #dallas +o dallas",
  "channel": "#dallas",
  "command": "MODE",
  "event": "MOD_GAINED",
  "isModerator": true,
  "isSelf": false,
  "message": "+o",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "dallas",
}
`;

exports[`Chat should handle messages MODE current user -o 1`] = `
Object {
  "_raw": ":jtv MODE #dallas -o dallas",
  "channel": "#dallas",
  "command": "MODE",
  "event": "MOD_LOST",
  "isModerator": false,
  "isSelf": false,
  "message": "-o",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "dallas",
}
`;

exports[`Chat should handle messages NAMES 1`] = `
Object {
  "_raw": ":ronni.tmi.twitch.tv 353 ronni = #dallas :ronni fred wilma",
  "channel": "#dallas",
  "command": "353",
  "event": "353",
  "isSelf": false,
  "message": "=",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "ronni",
  "usernames": Array [
    "ronni",
    "fred",
    "wilma",
  ],
}
`;

exports[`Chat should handle messages NAMES 2`] = `
Object {
  "_raw": ":ronni.tmi.twitch.tv 353 ronni = #dallas :ronni fred wilma",
  "channel": "#dallas",
  "command": "353",
  "event": "353",
  "isSelf": false,
  "message": "=",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "ronni",
  "usernames": Array [
    "ronni",
    "fred",
    "wilma",
  ],
}
`;

exports[`Chat should handle messages NAMES 3`] = `
Object {
  "_raw": ":ronni.tmi.twitch.tv 366 ronni #dallas :End of /NAMES list",
  "channel": "#dallas",
  "command": "366",
  "event": "366",
  "isSelf": false,
  "message": "#dallas",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages NOTICE ALREADY_BANNED 1`] = `
Object {
  "_raw": "@msg-id=already_banned :tmi.twitch.tv NOTICE #dallas :<user> is already banned in this channel.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_BANNED",
  "isSelf": false,
  "message": "<user> is already banned in this channel.",
  "tags": Object {
    "msgId": "already_banned",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE ALREADY_EMOTE_ONLY_OFF 1`] = `
Object {
  "_raw": "@msg-id=already_emote_only_off :tmi.twitch.tv NOTICE #dallas :This room is not in emote-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_EMOTE_ONLY_OFF",
  "isSelf": false,
  "message": "This room is not in emote-only mode.",
  "tags": Object {
    "msgId": "already_emote_only_off",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE ALREADY_EMOTE_ONLY_ON 1`] = `
Object {
  "_raw": "@msg-id=already_emote_only_on :tmi.twitch.tv NOTICE #dallas :This room is already in emote-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_EMOTE_ONLY_ON",
  "isSelf": false,
  "message": "This room is already in emote-only mode.",
  "tags": Object {
    "msgId": "already_emote_only_on",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE ALREADY_R9K_OFF 1`] = `
Object {
  "_raw": "@msg-id=already_r9k_off :tmi.twitch.tv NOTICE #dallas :This room is not in r9k mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_R9K_OFF",
  "isSelf": false,
  "message": "This room is not in r9k mode.",
  "tags": Object {
    "msgId": "already_r9k_off",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE ALREADY_R9K_ON 1`] = `
Object {
  "_raw": "@msg-id=already_r9k_on :tmi.twitch.tv NOTICE #dallas :This room is already in r9k mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_R9K_ON",
  "isSelf": false,
  "message": "This room is already in r9k mode.",
  "tags": Object {
    "msgId": "already_r9k_on",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE ALREADY_SUBS_OFF 1`] = `
Object {
  "_raw": "@msg-id=already_subs_off :tmi.twitch.tv NOTICE #dallas :This room is not in subscribers-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_SUBS_OFF",
  "isSelf": false,
  "message": "This room is not in subscribers-only mode.",
  "tags": Object {
    "msgId": "already_subs_off",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE ALREADY_SUBS_ON 1`] = `
Object {
  "_raw": "@msg-id=already_subs_on :tmi.twitch.tv NOTICE #dallas :This room is already in subscribers-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ALREADY_SUBS_ON",
  "isSelf": false,
  "message": "This room is already in subscribers-only mode.",
  "tags": Object {
    "msgId": "already_subs_on",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE AUTHENTICATION_FAILED 1`] = `
Object {
  "_raw": ":tmi.twitch.tv NOTICE * :Login authentication failed",
  "channel": "",
  "command": "NOTICE",
  "event": "AUTHENTICATION_FAILED",
  "isSelf": false,
  "message": "Login authentication failed",
  "tags": Object {
    "msgId": "authentication_failed",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE BAD_HOST_HOSTING 1`] = `
Object {
  "_raw": "@msg-id=bad_host_hosting :tmi.twitch.tv NOTICE #dallas :This channel is hosting <channel>.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "BAD_HOST_HOSTING",
  "isSelf": false,
  "message": "This channel is hosting <channel>.",
  "tags": Object {
    "msgId": "bad_host_hosting",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE BAD_UNBAN_NO_BAN 1`] = `
Object {
  "_raw": "@msg-id=bad_unban_no_ban :tmi.twitch.tv NOTICE #dallas :<user> is not banned from this channel.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "BAD_UNBAN_NO_BAN",
  "isSelf": false,
  "message": "<user> is not banned from this channel.",
  "tags": Object {
    "msgId": "bad_unban_no_ban",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE BAN_SUCCESS 1`] = `
Object {
  "_raw": "@msg-id=ban_success :tmi.twitch.tv NOTICE #dallas :<user> is now banned from this channel.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "BAN_SUCCESS",
  "isSelf": false,
  "message": "<user> is now banned from this channel.",
  "tags": Object {
    "msgId": "ban_success",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE EMOTE_ONLY_OFF 1`] = `
Object {
  "_raw": "@msg-id=emote_only_off :tmi.twitch.tv NOTICE #dallas :This room is no longer in emote-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "EMOTE_ONLY_OFF",
  "isSelf": false,
  "message": "This room is no longer in emote-only mode.",
  "tags": Object {
    "msgId": "emote_only_off",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE EMOTE_ONLY_ON 1`] = `
Object {
  "_raw": "@msg-id=emote_only_on :tmi.twitch.tv NOTICE #dallas :This room is now in emote-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "EMOTE_ONLY_ON",
  "isSelf": false,
  "message": "This room is now in emote-only mode.",
  "tags": Object {
    "msgId": "emote_only_on",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE HOST_OFF 1`] = `
Object {
  "_raw": "@msg-id=host_off :tmi.twitch.tv NOTICE #dallas :Exited host mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "HOST_OFF",
  "isSelf": false,
  "message": "Exited host mode.",
  "tags": Object {
    "msgId": "host_off",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE HOST_ON 1`] = `
Object {
  "_raw": "@msg-id=host_on :tmi.twitch.tv NOTICE #dallas :Now hosting <channel>.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "HOST_ON",
  "isSelf": false,
  "message": "Now hosting <channel>.",
  "tags": Object {
    "msgId": "host_on",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE HOSTS_REMAINING 1`] = `
Object {
  "_raw": "@msg-id=hosts_remaining :tmi.twitch.tv NOTICE #dallas :There are <number> host commands remaining this half hour.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "HOSTS_REMAINING",
  "isSelf": false,
  "message": "There are <number> host commands remaining this half hour.",
  "tags": Object {
    "msgId": "hosts_remaining",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE MSG_CHANNEL_SUSPENDED 1`] = `
Object {
  "_raw": "@msg-id=msg_channel_suspended :tmi.twitch.tv NOTICE #dallas :This channel is suspended.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "MSG_CHANNEL_SUSPENDED",
  "isSelf": false,
  "message": "This channel is suspended.",
  "tags": Object {
    "msgId": "msg_channel_suspended",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE R9K_OFF 1`] = `
Object {
  "_raw": "@msg-id=r9k_off :tmi.twitch.tv NOTICE #dallas :This room is no longer in r9k mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "R9K_OFF",
  "isSelf": false,
  "message": "This room is no longer in r9k mode.",
  "tags": Object {
    "msgId": "r9k_off",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE R9K_ON 1`] = `
Object {
  "_raw": "@msg-id=r9k_on :tmi.twitch.tv NOTICE #dallas :This room is now in r9k mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "R9K_ON",
  "isSelf": false,
  "message": "This room is now in r9k mode.",
  "tags": Object {
    "msgId": "r9k_on",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE ROOM_MODS 1`] = `
Object {
  "_raw": "@msg-id=room_mods :tmi.twitch.tv NOTICE #dallas :The moderators of this room are: dallas, ronni",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "ROOM_MODS",
  "isSelf": false,
  "message": "The moderators of this room are: dallas, ronni",
  "mods": Array [
    "dallas",
    "ronni",
  ],
  "tags": Object {
    "msgId": "room_mods",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE SLOW_OFF 1`] = `
Object {
  "_raw": "@msg-id=slow_off :tmi.twitch.tv NOTICE #dallas :This room is no longer in slow mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "SLOW_OFF",
  "isSelf": false,
  "message": "This room is no longer in slow mode.",
  "tags": Object {
    "msgId": "slow_off",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE SLOW_ON 1`] = `
Object {
  "_raw": "@msg-id=slow_on :tmi.twitch.tv NOTICE #dallas :This room is now in slow mode. You may send messages every <slow seconds> seconds.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "SLOW_ON",
  "isSelf": false,
  "message": "This room is now in slow mode. You may send messages every <slow seconds> seconds.",
  "tags": Object {
    "msgId": "slow_on",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE SUBS_OFF 1`] = `
Object {
  "_raw": "@msg-id=subs_off :tmi.twitch.tv NOTICE #dallas :This room is no longer in subscribers-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "SUBS_OFF",
  "isSelf": false,
  "message": "This room is no longer in subscribers-only mode.",
  "tags": Object {
    "msgId": "subs_off",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE SUBS_ON 1`] = `
Object {
  "_raw": "@msg-id=subs_on :tmi.twitch.tv NOTICE #dallas :This room is now in subscribers-only mode.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "SUBS_ON",
  "isSelf": false,
  "message": "This room is now in subscribers-only mode.",
  "tags": Object {
    "msgId": "subs_on",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE TIMEOUT_SUCCESS 1`] = `
Object {
  "_raw": "@msg-id=timeout_success :tmi.twitch.tv NOTICE #dallas :<user> has been timed out for <duration> seconds.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "TIMEOUT_SUCCESS",
  "isSelf": false,
  "message": "<user> has been timed out for <duration> seconds.",
  "tags": Object {
    "msgId": "timeout_success",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE UNBAN_SUCCESS 1`] = `
Object {
  "_raw": "@msg-id=unban_success :tmi.twitch.tv NOTICE #dallas :<user> is no longer banned from this channel.",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "UNBAN_SUCCESS",
  "isSelf": false,
  "message": "<user> is no longer banned from this channel.",
  "tags": Object {
    "msgId": "unban_success",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages NOTICE UNRECOGNIZED_CMD 1`] = `
Object {
  "_raw": "@msg-id=unrecognized_cmd :tmi.twitch.tv NOTICE #dallas :Unrecognized command: <command>",
  "channel": "#dallas",
  "command": "NOTICE",
  "event": "UNRECOGNIZED_CMD",
  "isSelf": false,
  "message": "Unrecognized command: <command>",
  "tags": Object {
    "msgId": "unrecognized_cmd",
  },
  "timestamp": Any<Date>,
  "username": "tmi.twitch.tv",
}
`;

exports[`Chat should handle messages PART 1`] = `
Object {
  "_raw": ":ronni!ronni@ronni.tmi.twitch.tv PART #dallas",
  "channel": "#dallas",
  "command": "PART",
  "event": "PART",
  "isSelf": false,
  "message": undefined,
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages PRIVMSG BITS 1`] = `
Object {
  "_raw": "@badges=staff/1,bits/1000;bits=100;color=;display-name=dallas;emotes=;id=b34ccfc7-4977-403a-8a94-33c6bac34fb8;mod=0;room-id=1337;subscriber=0;tmi-sent-ts=1507246572675;turbo=1;user-id=1337;user-type=staff :ronni!ronni@ronni.tmi.twitch.tv PRIVMSG #dallas :cheer100",
  "bits": 100,
  "channel": "#dallas",
  "command": "PRIVMSG",
  "event": "CHEER",
  "isSelf": false,
  "message": "cheer100",
  "tags": Object {
    "badges": Object {
      "bits": 1000,
      "staff": true,
    },
    "bits": 100,
    "color": "",
    "displayName": "dallas",
    "emoteSets": Array [],
    "emotes": Array [],
    "id": "b34ccfc7-4977-403a-8a94-33c6bac34fb8",
    "isModerator": false,
    "mod": "0",
    "roomId": "1337",
    "subscriber": "0",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "1337",
    "userType": "staff",
    "username": "dallas",
  },
  "timestamp": Any<Date>,
  "username": "dallas",
}
`;

exports[`Chat should handle messages PRIVMSG HOSTED_AUTO 1`] = `
Object {
  "_raw": ":jtv!jtv@jtv.tmi.twitch.tv PRIVMSG #dallas :ronni is now auto hosting you for up to 456 viewers.",
  "channel": "#dallas",
  "command": "PRIVMSG",
  "event": "HOSTED/AUTO",
  "isSelf": false,
  "message": "ronni is now auto hosting you for up to 456 viewers.",
  "numberOfViewers": 456,
  "tags": Object {
    "displayName": "ronni",
  },
  "timestamp": Any<Date>,
  "username": "jtv",
}
`;

exports[`Chat should handle messages PRIVMSG HOSTED_WITH_VIEWERS 1`] = `
Object {
  "_raw": ":jtv!~jtv@jtv.tmi.twitch.tv PRIVMSG #dallas :ronni is now hosting you for 123 viewers.",
  "channel": "#dallas",
  "command": "PRIVMSG",
  "event": "HOSTED/WITH_VIEWERS",
  "isSelf": false,
  "message": "ronni is now hosting you for 123 viewers.",
  "numberOfViewers": 123,
  "tags": Object {
    "displayName": "ronni",
  },
  "timestamp": Any<Date>,
  "username": "~jtv",
}
`;

exports[`Chat should handle messages PRIVMSG HOSTED_WITHOUT_VIEWERS 1`] = `
Object {
  "_raw": ":jtv!jtv@jtv.tmi.twitch.tv PRIVMSG dallas :ronni is now hosting you.",
  "channel": "#dallas",
  "command": "PRIVMSG",
  "event": "HOSTED/WITHOUT_VIEWERS",
  "isSelf": false,
  "message": "ronni is now hosting you.",
  "tags": Object {
    "displayName": "ronni",
  },
  "timestamp": Any<Date>,
  "username": "jtv",
}
`;

exports[`Chat should handle messages PRIVMSG NON_BITS 1`] = `
Object {
  "_raw": "@badges=global_mod/1,turbo/1;color=#0D4200;display-name=dallas;emotes=25:0-4,12-16/1902:6-10;id=b34ccfc7-4977-403a-8a94-33c6bac34fb8;mod=0;room-id=1337;subscriber=0;tmi-sent-ts=1507246572675;turbo=1;user-id=1337;user-type=global_mod :ronni!ronni@ronni.tmi.twitch.tv PRIVMSG #dallas :Kappa Keepo Kappa",
  "channel": "#dallas",
  "command": "PRIVMSG",
  "event": "PRIVMSG",
  "isSelf": false,
  "message": "Kappa Keepo Kappa",
  "tags": Object {
    "badges": Object {
      "globalMod": true,
      "turbo": true,
    },
    "bits": undefined,
    "color": "#0D4200",
    "displayName": "dallas",
    "emoteSets": Array [],
    "emotes": Array [
      Object {
        "end": 4,
        "id": "25",
        "start": 0,
      },
      Object {
        "end": 16,
        "id": "25",
        "start": 12,
      },
      Object {
        "end": 10,
        "id": "1902",
        "start": 6,
      },
    ],
    "id": "b34ccfc7-4977-403a-8a94-33c6bac34fb8",
    "isModerator": false,
    "mod": "0",
    "roomId": "1337",
    "subscriber": "0",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "1337",
    "userType": "global_mod",
    "username": "dallas",
  },
  "timestamp": Any<Date>,
  "username": "dallas",
}
`;

exports[`Chat should handle messages PRIVMSG should receive whisper 1`] = `
Object {
  "_raw": "@badges=premium/1;color=#FF7F50;display-name=joezeng;emotes=;message-id=4;thread-id=12345678_987654321;turbo=0;user-id=12345678;user-type= :joezeng!joezeng@joezeng.tmi.twitch.tv WHISPER test_chatbot :whisper whisper whisper'",
  "channel": "test_chatbot",
  "command": "WHISPER",
  "event": "WHISPER",
  "isSelf": false,
  "message": "whisper whisper whisper'",
  "tags": Object {
    "badges": "premium/1",
    "color": "#FF7F50",
    "displayName": "joezeng",
    "emotes": "",
    "messageId": "4",
    "threadId": "12345678_987654321",
    "turbo": "0",
    "userId": "12345678",
    "userType": "",
  },
  "timestamp": Any<Date>,
  "username": "joezeng",
}
`;

exports[`Chat should handle messages PRIVMSG whisper when anonymous 1`] = `[ChatError: [TwitchJS] To whisper, please connect with a token and username [Chat]]`;

exports[`Chat should handle messages USERNOTICE ANON_GIFT_PAID_UPGRADE 1`] = `
Object {
  "_raw": "@badges=subscriber/0,premium/1;color=#8A2BE2;display-name=MrSquidzilla;emotes=;flags=;id=0717057c-510d-4da4-8d25-b592803bdeac;login=mrsquidzilla;mod=0;msg-id=anongiftpaidupgrade;room-id=51533859;subscriber=1;system-msg=MrSquidzilla\\\\sis\\\\scontinuing\\\\sthe\\\\sGift\\\\sSub\\\\sthey\\\\sgot\\\\sfrom\\\\san\\\\sanonymous\\\\suser!;tmi-sent-ts=1542326428725;turbo=0;user-id=43818429;user-type= :tmi.twitch.tv USERNOTICE #annemunition",
  "channel": "#annemunition",
  "command": "USERNOTICE",
  "event": "ANON_GIFT_PAID_UPGRADE",
  "isSelf": false,
  "message": undefined,
  "parameters": Object {},
  "systemMessage": "MrSquidzilla is continuing the Gift Sub they got from an anonymous user!",
  "tags": Object {
    "badges": Object {
      "premium": true,
      "subscriber": 0,
    },
    "bits": undefined,
    "color": "#8A2BE2",
    "displayName": "MrSquidzilla",
    "emoteSets": Array [],
    "emotes": Array [],
    "flags": "",
    "id": "0717057c-510d-4da4-8d25-b592803bdeac",
    "isModerator": false,
    "login": "mrsquidzilla",
    "mod": "0",
    "msgId": "anongiftpaidupgrade",
    "roomId": "51533859",
    "subscriber": "1",
    "systemMsg": "MrSquidzilla is continuing the Gift Sub they got from an anonymous user!",
    "tmiSentTs": "1542326428725",
    "turbo": "0",
    "userId": "43818429",
    "userType": "",
    "username": "mrsquidzilla",
  },
  "timestamp": Any<Date>,
  "username": "mrsquidzilla",
}
`;

exports[`Chat should handle messages USERNOTICE GIFT_PAID_UPGRADE 1`] = `
Object {
  "_raw": "@badges=subscriber/0,premium/1;color=#8A2BE2;display-name=ElizabethSwann;emotes=;id=5bd3e064-c1e4-451b-9d7e-afe8cf5a44a2;login=elizabethswann;mod=0;msg-id=giftpaidupgrade;msg-param-promo-gift-total=123816;msg-param-promo-name=Subtember;msg-param-sender-login=cannibulcake;msg-param-sender-name=CannibulCake;room-id=7236692;subscriber=1;system-msg=ElizabethSwann\\\\sis\\\\scontinuing\\\\sthe\\\\sGift\\\\sSub\\\\sthey\\\\sgot\\\\sfrom\\\\sCannibulCake!\\\\sThey're\\\\sone\\\\sof\\\\s123816\\\\sgift\\\\ssubs\\\\sto\\\\scontinue\\\\sthis\\\\sSubtember.;tmi-sent-ts=1536880884587;turbo=0;user-id=85946347;user-type= :tmi.twitch.tv USERNOTICE #dansgaming",
  "channel": "#dansgaming",
  "command": "USERNOTICE",
  "event": "GIFT_PAID_UPGRADE",
  "isSelf": false,
  "message": undefined,
  "parameters": Object {
    "promoGiftTotal": 123816,
    "promoName": "Subtember",
    "senderLogin": "cannibulcake",
    "senderName": "CannibulCake",
  },
  "systemMessage": "ElizabethSwann is continuing the Gift Sub they got from CannibulCake! They're one of 123816 gift subs to continue this Subtember.",
  "tags": Object {
    "badges": Object {
      "premium": true,
      "subscriber": 0,
    },
    "bits": undefined,
    "color": "#8A2BE2",
    "displayName": "ElizabethSwann",
    "emoteSets": Array [],
    "emotes": Array [],
    "id": "5bd3e064-c1e4-451b-9d7e-afe8cf5a44a2",
    "isModerator": false,
    "login": "elizabethswann",
    "mod": "0",
    "msgId": "giftpaidupgrade",
    "msgParamPromoGiftTotal": "123816",
    "msgParamPromoName": "Subtember",
    "msgParamSenderLogin": "cannibulcake",
    "msgParamSenderName": "CannibulCake",
    "roomId": "7236692",
    "subscriber": "1",
    "systemMsg": "ElizabethSwann is continuing the Gift Sub they got from CannibulCake! They're one of 123816 gift subs to continue this Subtember.",
    "tmiSentTs": "1536880884587",
    "turbo": "0",
    "userId": "85946347",
    "userType": "",
    "username": "elizabethswann",
  },
  "timestamp": Any<Date>,
  "username": "elizabethswann",
}
`;

exports[`Chat should handle messages USERNOTICE RAID 1`] = `
Object {
  "_raw": "@badges=turbo/1;color=#9ACD32;display-name=TestChannel;emotes=;id=3d830f12-795c-447d-af3c-ea05e40fbddb;login=testchannel;mod=0;msg-id=raid;msg-param-displayName=TestChannel;msg-param-login=testchannel;msg-param-viewerCount=15;room-id=56379257;subscriber=0;system-msg=15\\\\sraiders\\\\sfrom\\\\sTestChannel\\\\shave\\\\sjoined\\\\n!;tmi-sent-ts=1507246572675;tmi-sent-ts=1507246572675;turbo=1;user-id=123456;user-type= :tmi.twitch.tv USERNOTICE #othertestchannel",
  "channel": "#othertestchannel",
  "command": "USERNOTICE",
  "event": "RAID",
  "isSelf": false,
  "message": undefined,
  "parameters": Object {
    "displayName": "TestChannel",
    "login": "testchannel",
    "viewerCount": 15,
  },
  "systemMessage": "15 raiders from TestChannel have joined
!",
  "tags": Object {
    "badges": Object {
      "turbo": true,
    },
    "bits": undefined,
    "color": "#9ACD32",
    "displayName": "TestChannel",
    "emoteSets": Array [],
    "emotes": Array [],
    "id": "3d830f12-795c-447d-af3c-ea05e40fbddb",
    "isModerator": false,
    "login": "testchannel",
    "mod": "0",
    "msgId": "raid",
    "msgParamDisplayName": "TestChannel",
    "msgParamLogin": "testchannel",
    "msgParamViewerCount": "15",
    "roomId": "56379257",
    "subscriber": "0",
    "systemMsg": "15 raiders from TestChannel have joined
!",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "123456",
    "userType": "",
    "username": "testchannel",
  },
  "timestamp": Any<Date>,
  "username": "testchannel",
}
`;

exports[`Chat should handle messages USERNOTICE RESUBSCRIPTION 1`] = `
Object {
  "_raw": "@badges=staff/1,broadcaster/1,turbo/1;color=#008000;display-name=ronni;emotes=;id=db25007f-7a18-43eb-9379-80131e44d633;login=ronni;mod=0;msg-id=resub;msg-param-months=6;msg-param-sub-plan=Prime;msg-param-sub-plan-name=Prime;room-id=1337;subscriber=1;system-msg=ronni\\\\shas\\\\ssubscribed\\\\sfor\\\\s6\\\\smonths!;tmi-sent-ts=1507246572675;turbo=1;user-id=1337;user-type=staff :tmi.twitch.tv USERNOTICE #dallas :Great stream -- keep it up!",
  "channel": "#dallas",
  "command": "USERNOTICE",
  "event": "RESUBSCRIPTION",
  "isSelf": false,
  "message": "Great stream -- keep it up!",
  "parameters": Object {
    "months": 6,
    "subPlan": "Prime",
    "subPlanName": "Prime",
  },
  "systemMessage": "ronni has subscribed for 6 months!",
  "tags": Object {
    "badges": Object {
      "broadcaster": true,
      "staff": true,
      "turbo": true,
    },
    "bits": undefined,
    "color": "#008000",
    "displayName": "ronni",
    "emoteSets": Array [],
    "emotes": Array [],
    "id": "db25007f-7a18-43eb-9379-80131e44d633",
    "isModerator": false,
    "login": "ronni",
    "mod": "0",
    "msgId": "resub",
    "msgParamMonths": "6",
    "msgParamSubPlan": "Prime",
    "msgParamSubPlanName": "Prime",
    "roomId": "1337",
    "subscriber": "1",
    "systemMsg": "ronni has subscribed for 6 months!",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "1337",
    "userType": "staff",
    "username": "ronni",
  },
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages USERNOTICE RITUAL 1`] = `
Object {
  "_raw": "@badges=;color=;display-name=SevenTest1;emotes=30259:0-6;id=37feed0f-b9c7-4c3a-b475-21c6c6d21c3d;login=seventest1;mod=0;msg-id=ritual;msg-param-ritual-name=new_chatter;room-id=6316121;subscriber=0;system-msg=Seventoes\\\\sis\\\\snew\\\\shere!;tmi-sent-ts=1508363903826;turbo=0;user-id=131260580;user-type= :tmi.twitch.tv USERNOTICE #seventoes :HeyGuys",
  "channel": "#seventoes",
  "command": "USERNOTICE",
  "event": "RITUAL",
  "isSelf": false,
  "message": "HeyGuys",
  "parameters": Object {
    "ritualName": "new_chatter",
  },
  "systemMessage": "Seventoes is new here!",
  "tags": Object {
    "badges": Object {},
    "bits": undefined,
    "color": "",
    "displayName": "SevenTest1",
    "emoteSets": Array [],
    "emotes": Array [
      Object {
        "end": 6,
        "id": "30259",
        "start": 0,
      },
    ],
    "id": "37feed0f-b9c7-4c3a-b475-21c6c6d21c3d",
    "isModerator": false,
    "login": "seventest1",
    "mod": "0",
    "msgId": "ritual",
    "msgParamRitualName": "new_chatter",
    "roomId": "6316121",
    "subscriber": "0",
    "systemMsg": "Seventoes is new here!",
    "tmiSentTs": "1508363903826",
    "turbo": "0",
    "userId": "131260580",
    "userType": "",
    "username": "seventest1",
  },
  "timestamp": Any<Date>,
  "username": "seventest1",
}
`;

exports[`Chat should handle messages USERNOTICE SUBMYSTERYGIFT 1`] = `
Object {
  "_raw": "@badges=subscriber/12,bits/5000,sub-gifter/1;color=;display-name=Nefarious_Ned;emotes=;id=761a4698-b867-4668-9658-c3844c7b8637;login=nefarious_ned;mod=0;msg-id=submysterygift;msg-param-mass-gift-count=5;msg-param-sender-count=37;msg-param-sub-plan=1000;room-id=73625408;subscriber=1;system-msg=Nefarious_Ned\\\\sis\\\\sgifting\\\\s5\\\\sTier\\\\s1\\\\sSubs\\\\sto\\\\sKate's\\\\scommunity!\\\\sThey've\\\\sgifted\\\\sa\\\\stotal\\\\sof\\\\s37\\\\sin\\\\sthe\\\\schannel!;tmi-sent-ts=1533875190783;turbo=0;user-id=109667930;user-type= :tmi.twitch.tv USERNOTICE #kate",
  "channel": "#kate",
  "command": "USERNOTICE",
  "event": "SUBSCRIPTION_GIFT_COMMUNITY",
  "isSelf": false,
  "message": undefined,
  "parameters": Object {
    "massGiftCount": 5,
    "senderCount": 37,
    "subPlan": "1000",
  },
  "systemMessage": "Nefarious_Ned is gifting 5 Tier 1 Subs to Kate's community! They've gifted a total of 37 in the channel!",
  "tags": Object {
    "badges": Object {
      "bits": 5000,
      "subGifter": true,
      "subscriber": 12,
    },
    "bits": undefined,
    "color": "",
    "displayName": "Nefarious_Ned",
    "emoteSets": Array [],
    "emotes": Array [],
    "id": "761a4698-b867-4668-9658-c3844c7b8637",
    "isModerator": false,
    "login": "nefarious_ned",
    "mod": "0",
    "msgId": "submysterygift",
    "msgParamMassGiftCount": "5",
    "msgParamSenderCount": "37",
    "msgParamSubPlan": "1000",
    "roomId": "73625408",
    "subscriber": "1",
    "systemMsg": "Nefarious_Ned is gifting 5 Tier 1 Subs to Kate's community! They've gifted a total of 37 in the channel!",
    "tmiSentTs": "1533875190783",
    "turbo": "0",
    "userId": "109667930",
    "userType": "",
    "username": "nefarious_ned",
  },
  "timestamp": Any<Date>,
  "username": "nefarious_ned",
}
`;

exports[`Chat should handle messages USERNOTICE SUBSCRIPTION 1`] = `
Object {
  "_raw": "@badges=staff/1,broadcaster/1,turbo/1;color=#008000;display-name=ronni;emotes=;id=db25007f-7a18-43eb-9379-80131e44d633;login=ronni;mod=0;msg-id=sub;msg-param-months=1;msg-param-sub-plan=Prime;msg-param-sub-plan-name=Prime;room-id=1337;subscriber=1;system-msg=ronni\\\\sjust\\\\ssubscribed\\\\swith\\\\sTwitch\\\\sPrime!;tmi-sent-ts=1507246572675;turbo=1;user-id=1337;user-type=staff :tmi.twitch.tv USERNOTICE #dallas :Great stream -- keep it up!",
  "channel": "#dallas",
  "command": "USERNOTICE",
  "event": "SUBSCRIPTION",
  "isSelf": false,
  "message": "Great stream -- keep it up!",
  "parameters": Object {
    "months": 1,
    "subPlan": "Prime",
    "subPlanName": "Prime",
  },
  "systemMessage": "ronni just subscribed with Twitch Prime!",
  "tags": Object {
    "badges": Object {
      "broadcaster": true,
      "staff": true,
      "turbo": true,
    },
    "bits": undefined,
    "color": "#008000",
    "displayName": "ronni",
    "emoteSets": Array [],
    "emotes": Array [],
    "id": "db25007f-7a18-43eb-9379-80131e44d633",
    "isModerator": false,
    "login": "ronni",
    "mod": "0",
    "msgId": "sub",
    "msgParamMonths": "1",
    "msgParamSubPlan": "Prime",
    "msgParamSubPlanName": "Prime",
    "roomId": "1337",
    "subscriber": "1",
    "systemMsg": "ronni just subscribed with Twitch Prime!",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "1337",
    "userType": "staff",
    "username": "ronni",
  },
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages USERNOTICE SUBSCRIPTION_GIFT 1`] = `
Object {
  "_raw": "@badges=staff/1,premium/1;color=#0000FF;display-name=TWW2;emotes=;id=e9176cd8-5e22-4684-ad40-ce53c2561c5e;login=tww2;mod=0;msg-id=subgift;msg-param-months=1;msg-param-recipient-display-name=Mr_Woodchuck;msg-param-recipient-id=89614178;msg-param-recipient-name=mr_woodchuck;msg-param-sub-plan-name=House\\\\sof\\\\sNyoro~n;msg-param-sub-plan=1000;room-id=19571752;subscriber=0;system-msg=TWW2\\\\sgifted\\\\sa\\\\sTier\\\\s1\\\\ssub\\\\sto\\\\sMr_Woodchuck!;tmi-sent-ts=1521159445153;turbo=0;user-id=13405587;user-type=staff :tmi.twitch.tv USERNOTICE #forstycup",
  "channel": "#forstycup",
  "command": "USERNOTICE",
  "event": "SUBSCRIPTION_GIFT",
  "isSelf": false,
  "message": undefined,
  "parameters": Object {
    "months": 1,
    "recipientDisplayName": "Mr_Woodchuck",
    "recipientId": "89614178",
    "recipientName": "mr_woodchuck",
    "subPlan": "1000",
    "subPlanName": "House of Nyoro~n",
  },
  "systemMessage": "TWW2 gifted a Tier 1 sub to Mr_Woodchuck!",
  "tags": Object {
    "badges": Object {
      "premium": true,
      "staff": true,
    },
    "bits": undefined,
    "color": "#0000FF",
    "displayName": "TWW2",
    "emoteSets": Array [],
    "emotes": Array [],
    "id": "e9176cd8-5e22-4684-ad40-ce53c2561c5e",
    "isModerator": false,
    "login": "tww2",
    "mod": "0",
    "msgId": "subgift",
    "msgParamMonths": "1",
    "msgParamRecipientDisplayName": "Mr_Woodchuck",
    "msgParamRecipientId": "89614178",
    "msgParamRecipientName": "mr_woodchuck",
    "msgParamSubPlan": "1000",
    "msgParamSubPlanName": "House of Nyoro~n",
    "roomId": "19571752",
    "subscriber": "0",
    "systemMsg": "TWW2 gifted a Tier 1 sub to Mr_Woodchuck!",
    "tmiSentTs": "1521159445153",
    "turbo": "0",
    "userId": "13405587",
    "userType": "staff",
    "username": "tww2",
  },
  "timestamp": Any<Date>,
  "username": "tww2",
}
`;

exports[`Chat should handle messages USERNOTICE UNKNOWN 1`] = `
Object {
  "_raw": "@badges=;color=;display-name=SevenTest1;emotes=30259:0-6;id=37feed0f-b9c7-4c3a-b475-21c6c6d21c3d;login=seventest1;mod=0;msg-id=unknown;msg-param-unknown=value;room-id=6316121;subscriber=0;system-msg=Unknown\\\\ssystem\\\\smessage;tmi-sent-ts=1508363903826;turbo=0;user-id=131260580;user-type= :tmi.twitch.tv USERNOTICE #seventoes :Unknown USERNOTICE",
  "channel": "#seventoes",
  "command": "USERNOTICE",
  "event": "UNKNOWN",
  "isSelf": false,
  "message": "Unknown USERNOTICE",
  "parameters": Object {
    "unknown": "value",
  },
  "systemMessage": "Unknown system message",
  "tags": Object {
    "badges": Object {},
    "bits": undefined,
    "color": "",
    "displayName": "SevenTest1",
    "emoteSets": Array [],
    "emotes": Array [
      Object {
        "end": 6,
        "id": "30259",
        "start": 0,
      },
    ],
    "id": "37feed0f-b9c7-4c3a-b475-21c6c6d21c3d",
    "isModerator": false,
    "login": "seventest1",
    "mod": "0",
    "msgId": "unknown",
    "msgParamUnknown": "value",
    "roomId": "6316121",
    "subscriber": "0",
    "systemMsg": "Unknown system message",
    "tmiSentTs": "1508363903826",
    "turbo": "0",
    "userId": "131260580",
    "userType": "",
    "username": "seventest1",
  },
  "timestamp": Any<Date>,
  "username": "seventest1",
}
`;

exports[`Chat should handle messages deviations 218 1`] = `
Object {
  "_raw": ":twipkr.tmi.twitch.tv 353 twipkr = #bjhjh100 :commanderroot anotherttvviewer bjhjh100 twipkr ssakdook grany0 bananennanen nightbot p0sitivitybot",
  "channel": "#bjhjh100",
  "command": "353",
  "event": "353",
  "isSelf": false,
  "message": "=",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "twipkr",
  "usernames": Array [
    "commanderroot",
    "anotherttvviewer",
    "bjhjh100",
    "twipkr",
    "ssakdook",
    "grany0",
    "bananennanen",
    "nightbot",
    "p0sitivitybot",
  ],
}
`;

exports[`Chat should handle messages deviations 218 2`] = `
Object {
  "_raw": ":twipkr.tmi.twitch.tv 366 twipkr #bjhjh100 :End of /NAMES list",
  "channel": "#bjhjh100",
  "command": "366",
  "event": "366",
  "isSelf": false,
  "message": "#bjhjh100",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "twipkr",
}
`;

exports[`Chat should handle messages deviations 218 3`] = `
Object {
  "_raw": ":jtv MODE #bjhjh100 +o twipkr",
  "channel": "#bjhjh100",
  "command": "MODE",
  "event": "MOD_GAINED",
  "isModerator": true,
  "isSelf": false,
  "message": "+o",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "twipkr",
}
`;

exports[`Chat should handle messages deviations 218 4`] = `
Object {
  "_raw": ":jtv MODE #bjhjh100 +o nightbot",
  "channel": "#bjhjh100",
  "command": "MODE",
  "event": "MOD_GAINED",
  "isModerator": true,
  "isSelf": false,
  "message": "+o",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "nightbot",
}
`;

exports[`Chat should handle messages deviations 218 5`] = `
Object {
  "_raw": ":jtv MODE #bjhjh100 +o bjhjh100",
  "channel": "#bjhjh100",
  "command": "MODE",
  "event": "MOD_GAINED",
  "isModerator": true,
  "isSelf": false,
  "message": "+o",
  "tags": Object {},
  "timestamp": Any<Date>,
  "username": "bjhjh100",
}
`;

exports[`Chat should handle messages deviations CLEARCHAT deviation 1 1`] = `
Object {
  "_raw": "@ban-duration=600;room-id=19571641;target-user-id=200817980;tmi-sent-ts=1531857100477 :tmi.twitch.tv CLEARCHAT #ninja :aiibopz",
  "channel": "#ninja",
  "command": "CLEARCHAT",
  "event": "USER_BANNED",
  "isSelf": false,
  "tags": Object {
    "banDuration": 600,
    "banReason": undefined,
    "roomId": "19571641",
    "targetUserId": "200817980",
    "tmiSentTs": "1531857100477",
  },
  "timestamp": Any<Date>,
  "username": "aiibopz",
}
`;

exports[`Chat should handle messages should emit multiple events for compound events 1`] = `
Object {
  "_raw": "@badges=staff/1,broadcaster/1,turbo/1;color=#008000;display-name=ronni;emotes=;id=db25007f-7a18-43eb-9379-80131e44d633;login=ronni;mod=0;msg-id=sub;msg-param-months=1;msg-param-sub-plan=Prime;msg-param-sub-plan-name=Prime;room-id=1337;subscriber=1;system-msg=ronni\\\\sjust\\\\ssubscribed\\\\swith\\\\sTwitch\\\\sPrime!;tmi-sent-ts=1507246572675;turbo=1;user-id=1337;user-type=staff :tmi.twitch.tv USERNOTICE #dallas :Great stream -- keep it up!",
  "channel": "#dallas",
  "command": "USERNOTICE",
  "event": "SUBSCRIPTION",
  "isSelf": false,
  "message": "Great stream -- keep it up!",
  "parameters": Object {
    "months": 1,
    "subPlan": "Prime",
    "subPlanName": "Prime",
  },
  "systemMessage": "ronni just subscribed with Twitch Prime!",
  "tags": Object {
    "badges": Object {
      "broadcaster": true,
      "staff": true,
      "turbo": true,
    },
    "bits": undefined,
    "color": "#008000",
    "displayName": "ronni",
    "emoteSets": Array [],
    "emotes": Array [],
    "id": "db25007f-7a18-43eb-9379-80131e44d633",
    "isModerator": false,
    "login": "ronni",
    "mod": "0",
    "msgId": "sub",
    "msgParamMonths": "1",
    "msgParamSubPlan": "Prime",
    "msgParamSubPlanName": "Prime",
    "roomId": "1337",
    "subscriber": "1",
    "systemMsg": "ronni just subscribed with Twitch Prime!",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "1337",
    "userType": "staff",
    "username": "ronni",
  },
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle messages should emit multiple events for compound events 2`] = `
Object {
  "_raw": "@badges=staff/1,broadcaster/1,turbo/1;color=#008000;display-name=ronni;emotes=;id=db25007f-7a18-43eb-9379-80131e44d633;login=ronni;mod=0;msg-id=sub;msg-param-months=1;msg-param-sub-plan=Prime;msg-param-sub-plan-name=Prime;room-id=1337;subscriber=1;system-msg=ronni\\\\sjust\\\\ssubscribed\\\\swith\\\\sTwitch\\\\sPrime!;tmi-sent-ts=1507246572675;turbo=1;user-id=1337;user-type=staff :tmi.twitch.tv USERNOTICE #dallas :Great stream -- keep it up!",
  "channel": "#dallas",
  "command": "USERNOTICE",
  "event": "SUBSCRIPTION",
  "isSelf": false,
  "message": "Great stream -- keep it up!",
  "parameters": Object {
    "months": 1,
    "subPlan": "Prime",
    "subPlanName": "Prime",
  },
  "systemMessage": "ronni just subscribed with Twitch Prime!",
  "tags": Object {
    "badges": Object {
      "broadcaster": true,
      "staff": true,
      "turbo": true,
    },
    "bits": undefined,
    "color": "#008000",
    "displayName": "ronni",
    "emoteSets": Array [],
    "emotes": Array [],
    "id": "db25007f-7a18-43eb-9379-80131e44d633",
    "isModerator": false,
    "login": "ronni",
    "mod": "0",
    "msgId": "sub",
    "msgParamMonths": "1",
    "msgParamSubPlan": "Prime",
    "msgParamSubPlanName": "Prime",
    "roomId": "1337",
    "subscriber": "1",
    "systemMsg": "ronni just subscribed with Twitch Prime!",
    "tmiSentTs": "1507246572675",
    "turbo": "1",
    "userId": "1337",
    "userType": "staff",
    "username": "ronni",
  },
  "timestamp": Any<Date>,
  "username": "ronni",
}
`;

exports[`Chat should handle multiple channels should deny message broadcasting when anonymous 1`] = `[ChatError: [TwitchJS] To broadcast, please connect with a token and username [Chat]]`;

exports[`Chat should join channel 1`] = `
Object {
  "roomState": Object {
    "broadcasterLang": "en",
    "r9K": "0",
    "slow": 0,
    "subsOnly": false,
  },
  "userState": Object {
    "badges": Object {},
    "bits": undefined,
    "color": "#0D4200",
    "displayName": "ronni",
    "emoteSets": Array [
      "0",
      "33",
      "50",
      "237",
      "793",
      "2126",
      "3517",
      "4578",
      "5569",
      "9400",
      "10337",
      "12239",
    ],
    "emotes": Array [],
    "isModerator": true,
    "mod": "1",
    "subscriber": "1",
    "turbo": "1",
    "userType": "staff",
    "username": "ronni",
  },
}
`;

exports[`Chat should throw when sending a message as anonymous 1`] = `[ChatError: [TwitchJS] To send messages, please connect with a token and username [Chat]]`;
